@@ -1,5 +1,9 @@
 2021-02-25  Allen D. Ball  <ball@hcf.dev>
 
+	* src/main/java/ganymede/install/Install.java:
+	Added support for --id-prefix=PREFIX and --id-suffix=SUFFIX
+	installation options.
+
 	* Enable the Kernel @RestController.  Implement the print POST
 	method and use the method to move MIME bundles from the JShell to
 	the Kernel.
